Adiciona class sobre_mim e configura

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <img id="minha_foto" src="/imagens/foto.perfil.jpeg" width="243px" alt="Foto do Osvaldo Henrique sorrindo">
 
-            <p>Olá, pessoas, me chamo <strong>Osvaldo Henrique</strong> ,aqui você conhecerá, de maneira breve,
+            <p class="sobre_mim">Olá, pessoas, me chamo <strong>Osvaldo Henrique</strong> ,aqui você conhecerá, de maneira breve,
                 sobre
                 mim!
                 Sou brasileiro nato, no momento atual resido em Aracaju, capital de Sergipe.</p>
